--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -1,7 +1,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 500;
   text-align: center; }
 
@@ -22,16 +22,34 @@
   margin: 1rem;
   color: #e6eaf0; }
 
+.horizontal {
+  width: 66%;
+  height: 1rem;
+  background: #6c7787;
+  display: block;
+  margin: 1rem 1rem;
+  border-radius: 3rem; }
+  .horizontal.small {
+    height: 0.2rem;
+    width: 3rem; }
+
 .vertical {
   width: 1rem;
   height: 8rem;
-  background: #e6eaf0;
+  background: #6c7787;
   display: block;
   margin: 1rem 1rem;
-  border-radius: 20%; }
+  border-radius: 3rem; }
   .vertical.small {
-    height: 3rem;
     width: 0.2rem; }
+
+a:link {
+  color: #6c7787;
+  background-color: transparent; }
+
+a:visited {
+  color: #6c7787;
+  background-color: transparent; }
 
 body {
   background: url("../img/Gray double 2.jpg") repeat-y center center/cover;
@@ -46,7 +64,7 @@ body {
   #header .name {
     color: #f4f4f4;
     font-weight: 1000;
-    font-family: "Orbitron", sans-serif;
+    font-family: 'Orbitron', sans-serif;
     font-size: 4rem;
     text-shadow: #3b4350 0.1rem 0.1rem 0.8rem, #3b4350 -0.1rem -0.1rem 0.8rem, #bfebee 0.1rem 0.1rem 0.2rem, #bfebee -0.1rem -0.1rem 0.5rem;
     margin-bottom: 1rem; }
@@ -65,7 +83,7 @@ body {
 
 #clickables .active-container {
   box-shadow: #3b4350 0.1rem 0.1rem 0.8rem, #3b4350 -0.1rem -0.1rem 0.8rem, #bfebee 0.1rem 0.1rem 0.2rem, #bfebee -0.1rem -0.1rem 0.5rem;
-  transform: scale(1.1);
+  min-width: 70vw;
   transition: all 0.4s;
   margin-top: 1rem; }
 
@@ -88,9 +106,10 @@ body {
     color: black;
     width: 1.5rem;
     padding: 0.2rem 0.5rem;
-    border-radius: 0.5rem; }
+    border-radius: 0.5rem;
+    color: #6c7787 !important; }
     #clickables .container i:hover {
-      color: #bfebee;
+      color: #bfebee !important;
       background: #3b4350;
       box-shadow: #bfebee 0.1rem 0.1rem 0.8rem, #bfebee -0.1rem -0.1rem 0.8rem;
       transition: all 0.3s;
@@ -102,8 +121,41 @@ body {
       transform: rotate(180deg) scale(1.5);
       transition: all 0.3s; }
 
+#clickables #abilities-drop-down {
+  min-width: 75%;
+  justify-content: space-between; }
+
 #clickables #projects-drop-down {
-  flex-direction: column; }
+  flex-direction: column;
+  min-width: 75%;
+  align-items: center; }
+  #clickables #projects-drop-down .project {
+    margin: 2rem 0;
+    position: relative;
+    min-width: 100%; }
+    #clickables #projects-drop-down .project p {
+      font-size: 1.2rem; }
+    #clickables #projects-drop-down .project img {
+      min-width: 100%;
+      margin: 1rem; }
+    #clickables #projects-drop-down .project i {
+      margin-top: 0.4rem;
+      color: black;
+      width: 1.5rem;
+      padding: 0 0.5rem 0 0.2rem;
+      border-radius: 0; }
+      #clickables #projects-drop-down .project i:hover {
+        all: 0;
+        color: #bfebee;
+        background: #3b4350;
+        border: solid #3b4350;
+        border-radius: 100%;
+        box-shadow: #bfebee 0.1rem 0.1rem 0.8rem, #bfebee -0.1rem -0.1rem 0.8rem;
+        box-shadow: inset #3b4350 0.1rem 0.1rem 0.8rem, #3b4350 -0.1rem -0.1rem 0.8rem, #bfebee 0.1rem 0.1rem 0.2rem, #bfebee -0.1rem -0.1rem 0.5rem;
+        margin-top: 1rem;
+        transform: scale(1.5);
+        transition: all 0.3s;
+        cursor: pointer; }
 
 #clickables #reach-me-drop-down {
   flex-direction: column;
@@ -135,7 +187,6 @@ body {
 
 footer {
   color: #6c7787;
-  clear: both;
   height: 1rem; }
   footer div {
     margin: 0.5rem 0.5rem;
