--- a/scss/index.scss
+++ b/scss/index.scss
@@ -245,6 +245,15 @@ body {
 			min-height: 2.5rem;
 			min-width: 45vw;
 		}
+		#myfile {
+			min-height: 2.5rem;
+			// width: 45vw;
+			// max-width: 45vw;
+			// min-width: 45vw;
+			left: 40%;
+			right: 40%;
+			max-width: 170px;
+		}
 		#submit-button {
 			line-height: 1.5rem;
 			border: 0.1rem solid $light-color;
