--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -182,7 +182,7 @@ body {
     max-width: 45vw;
     min-height: 2.5rem;
     min-width: 45vw; }
-  #clickables #reach-me-drop-down #myfile {
+  #clickables #reach-me-drop-down #myfile #recap {
     min-height: 2.5rem;
     left: 40%;
     right: 40%;
