--- a/scss/index.scss
+++ b/scss/index.scss
@@ -245,7 +245,7 @@ body {
 			min-height: 2.5rem;
 			min-width: 45vw;
 		}
-		#myfile {
+		#myfile #recap {
 			min-height: 2.5rem;
 			// width: 45vw;
 			// max-width: 45vw;
