--- a/scss/index.scss
+++ b/scss/index.scss
@@ -253,6 +253,8 @@ body {
 			left: 40%;
 			right: 40%;
 			max-width: 170px;
+			justify-content: center;
+			align-content: center;
 		}
 		#submit-button {
 			line-height: 1.5rem;
