--- a/scss/index.scss
+++ b/scss/index.scss
@@ -254,8 +254,8 @@ body {
 				// width: 45vw;
 				// max-width: 45vw;
 				// min-width: 45vw;
-				left: 40%;
-				right: 40%;
+				// left: 40%;
+				// right: 40%;
 				max-width: 170px;
 				justify-content: center;
 				align-content: center;
