--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -74,12 +74,16 @@ body {
   text-align: center;
   padding: 3rem 0 2rem 0; }
   #header .name {
-    color: #f4f4f4;
+    color: #e6eaf0;
     font-weight: 1000;
     font-family: 'Orbitron', sans-serif;
     font-size: 4rem;
     text-shadow: #3b4350 0.1rem 0.1rem 0.8rem, #3b4350 -0.1rem -0.1rem 0.8rem, #bfebee 0.1rem 0.1rem 0.2rem, #bfebee -0.1rem -0.1rem 0.5rem;
     margin-bottom: 1rem; }
+
+#title {
+  color: #e6eaf0;
+  text-shadow: #3b4350 0.1rem 0.1rem 0.8rem, #3b4350 -0.1rem -0.1rem 0.8rem, #bfebee 0.1rem 0.1rem 0.2rem, #bfebee -0.1rem -0.1rem 0.5rem; }
 
 #about-me {
   border: 0.1rem solid black;
