--- a/docs/css/index.css
+++ b/docs/css/index.css
@@ -61,7 +61,7 @@ a:visited {
 
 body {
   position: relative;
-  background-image: url("../img/light gray double.jpg");
+  background-image: url("../img/Gray double 2.jpg");
   background-position: top;
   background-size: 100%;
   align-content: space-between;
